--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <div class="bg-blue-500"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
